--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="utf-8" />
-  <!-- <link rel="icon" href="favicon.ico" /> -->
+  <link rel="icon" href="MPL SEMPLE.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="MPL react-project" />
-  <!-- <link rel="apple-touch-icon" href="logo192.png" /> -->
+  <link rel="apple-touch-icon" href="MPL SEMPLE.png" />
 
   <link rel="manifest" href="manifest.json" />
 
